# spotify-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py  cache.py  config.py  spotify_api.py  utils.py
